[package]
name = "exchanger"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
reqwest = { version = "0.11.14", features = ["json"] }
rust_decimal = "1.28.1"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
