[package]
name = "exchanger"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
reqwest = { version = "0.11.23", features = ["json"] }
rust_decimal = "1.33.1"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
